Half made signature for images

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -76,6 +76,12 @@
                     {{params['parameters']['set_']}}
                 </div>
             {% endif %}
+
+            {% if params['signature']!="" %}
+                <div class="w3-tag w3-round-large w3-blue-grey w3-center" style="margin-bottom: 5px">
+                    {{params['signature']}}
+                </div>
+            {% endif %}
     <p></p>
 
 
