--- a/templates/settings.html
+++ b/templates/settings.html
@@ -66,6 +66,16 @@
                         </button>
                     </div>
                     <p></p>
+                    <div class="w3-container w3-card"  style="padding: 0">
+                        <div class="w3-container w3-center w3-half w3-padding">
+                            Начало нумерации рисунков:
+                        </div>
+                        <input class="w3-input w3-border w3-border-theme w3-round w3-col s3 " name="num_start" type="text" style="text-align: right;" autocomplete="off" value="{{NUM_START}}">
+                        <button style="padding-bottom: 10px" class="w3-button w3-quarter w3-theme-l4" name="fix" value="0" type="submit">
+                            Fix
+                        </button>
+                    </div>
+                    <p></p>
         </div>
 </div>
 </form>
