Added possibility to create the protocol

--- a/templates/page.html
+++ b/templates/page.html
@@ -26,7 +26,7 @@
         <a href="/scopes" class="w3-button w3-block w3-hover-theme">Шаг 3: Создание картинок осциллограмм</a>
       </div>
       <div class="w3-col s3">
-        <a href="/protocol" class="w3-button w3-block w3-hover-theme">Шаг 4: </a>
+        <a href="/protocol" class="w3-button w3-block w3-hover-theme">Шаг 4: Создание протокола</a>
       </div>
     </div>
   </div>
