--- a/templates/protocol.html
+++ b/templates/protocol.html
@@ -2,7 +2,7 @@
 {% block page_body%}
 
 <div class="w3-display-middle">
-        <a href="#protocol" style="text-decoration: none">
+        <a href="protocol_template" style="text-decoration: none">
             <div class="w3-btn w3-circle w3-red w3-xxlarge" style="width: 200px; height: 200px;">
                 <div class="w3-container w3-display-middle">Создать!</div>
             </div>
