Добавлены кнопка скачивания и иконка

--- a/templates/protocol.html
+++ b/templates/protocol.html
@@ -1,12 +1,14 @@
 {% extends "page.html" %}
 {% block page_body%}
 
-<div class="w3-display-middle">
-        <a href="static/protocol.docx" style="text-decoration: none">
-            <div class="w3-btn w3-circle w3-red w3-xxlarge" style="width: 200px; height: 200px;">
-                <div class="w3-container w3-display-middle">Start!</div>
-            </div>
-        </a>
+<form action="protocol_download" method="POST">
+    <div class="w3-display-middle">
+            <a href="static/protocol.docx" download style="text-decoration: none">
+                <button class="w3-btn w3-circle w3-red w3-xxlarge" action="submit" style="width: 200px; height: 200px;">
+                    <div class="w3-container w3-display-middle" >Создать</div>
+                </button>
+            </a>
 
-</div>
+    </div>
+</form>
 {% endblock %}
