--- a/templates/page.html
+++ b/templates/page.html
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" href="static/w3.css">
 <link rel="stylesheet" href="static/w3-theme-blue-grey.css">
+<link rel="icon" type="image/png" href="static/icon.ico">
 <script src="static/scripts.js"></script>
 <script src="static/jquery-3.4.1.min.js"></script>
 <body>
